changed module name, finished deep nesting scenario

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
 </head>
 
-<body ng-app="angular-seo">
+<body ng-app="lithograph">
 <div class="container">
 
     <div ng-include="'partials/menu.html'"></div>
